# amq

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.conda/conda-meta/: history
amq/: __init__.py  amq_quantization.py  amq_quantization_proxy.py  amq_search.py  amq_sensitivity.py  amq_speed_benchmark.py
amq/evaluation/: __init__.py  evaluator.py
amq/kernel/: install_all_kernel.sh
amq/kernel/AutoGPTQ/: setup.py
amq/kernel/ft/: FT.cpp  setup.py
amq/kernel/hqq/: Readme.md
amq/kernel/hqq/hqq/backends/: autogptq.py  ft.py
amq/kernel/hqq/hqq/utils/: patching.py
amq/kernel/monkeypatch/: ftllama_generate.py  ftllama_modeling.py
amq/model/: __init__.py
amq/predictor/: __init__.py  adaptive_switching.py  factory.py  mlp.py
amq/quantization/: awq.py  awq_0213org.py  awq_jg.py  awq_orig.py  awq_pv.py  base.py  gptq.py  model.py  model_config.json  owq.py
amq/quantization/awq_utils/: auto_clip.py  auto_scale.py  pre_quant.py  qmodule.py  quantizer.py
amq/search/: __init__.py  optimizer.py  problem.py  space.py
amq/sensitivity/: Llama-2-7b-hf_dataset_wikitext2_n_sample_128_seqlen_2048.json
amq/utils/: __init__.py  args.py  data.py  dispatch.py  eval.py  func.py  ga.py  loss.py
examples/: __init__.py  linear_sensitivity.py  post_search.py  search_model.py
scripts/: amq_quantization.sh  amq_quantization_proxy.sh  amq_search.sh  amq_sensitivity.sh  amq_speed_benchmark.sh
