[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amq"
version = "0.1.0"
description = "Automated Mixed-precision Quantization for Large Language Models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Sangjun Lee", email = "sangjunlee@posteck.ac.kr"}
    {name = "Seung-taek Woo", email = "wst9909@postech.ac.kr"}
]
keywords = ["quantization", "llm", "mixed-precision", "automl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.20.0",
    "hqq>=0.2.0",
    "pymoo>=0.6.0",
    "datasets",
    "tqdm",
    "scikit-learn",
    "numpy",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/yourusername/amq"
Repository = "https://github.com/yourusername/amq"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
amq = ["**/*.json"]
